--- a/config/database.yml
+++ b/config/database.yml
@@ -21,11 +21,11 @@ test:
   database: db/test.sqlite3
 
 production:
-  adapter: mysql2
+  adapter: pg
   encoding: utf8
   database: <%= ENV['RDS_DB_NAME'] %>
   username: <%= ENV['RDS_USERNAME'] %>
   password: <%= ENV['RDS_PASSWORD'] %>
-  host: <%= ENV['RDS_HOSTNAME'] %>
+  host: <%= ENV['RDS_HOST'] %>
   port: <%= ENV['RDS_PORT'] %>
 
