--- a/config/database.yml
+++ b/config/database.yml
@@ -24,7 +24,7 @@ test:
   database: db/test.sqlite3
 
 production:
-  adapter: pg
+  adapter: postgresql
   encoding: utf8
   database: <%= ENV['RDS_DB_NAME'] %>
   username: <%= ENV['RDS_USERNAME'] %>
