--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "private": true,
   "dependencies": {
     "@babel/preset-react": "^7.0.0",
+    "@rails/actiontext": "^6.0.0",
     "@rails/webpacker": "^4.0.7",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react_ujs": "^2.5.0"
+    "react_ujs": "^2.5.0",
+    "trix": "^1.0.0"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.8.0"
