--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@rails/actiontext": "^6.0.0",
     "@rails/webpacker": "^4.0.7",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "intro.js": "^2.9.3",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
