--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@babel/preset-react": "^7.0.0",
     "@rails/actiontext": "^6.0.0",
     "@rails/webpacker": "^4.0.7",
+    "ahoy.js": "^0.3.4",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "intro.js": "^2.9.3",
     "postcss": "^7.0.18",
