--- a/config/storage.yml
+++ b/config/storage.yml
@@ -8,8 +8,8 @@ local:
 
 # Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 amazon:
-  service: S3
-  bucket: jbh-active-storage-attachments
+  service: 'S3'
+  bucket: 'jbh-active-storage-attachments'
 
 # Remember not to checkin your GCS keyfile to a repository
 # google:
