--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "private": true,
   "dependencies": {
     "@babel/preset-react": "^7.0.0",
+    "@fullcalendar/core": "^4.4.0",
+    "@fullcalendar/daygrid": "^4.4.0",
     "@rails/actiontext": "^6.0.0",
     "@rails/webpacker": "^4.0.7",
     "ahoy.js": "^0.3.4",
