--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@fullcalendar/core": "^4.4.0",
     "@fullcalendar/daygrid": "^4.4.0",
     "@fullcalendar/interaction": "^4.4.0",
+    "@googlemaps/google-maps-services-js": "^3.1.13",
     "@rails/actiontext": "^6.0.0",
     "@rails/webpacker": "^4.0.7",
     "ahoy.js": "^0.3.4",
